--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+USER_ACTIVATION_CODE_REPLY_TTL_MINUTES=0
+USER_ACTIVATION_CODE_TTL_MINUTES=0
